# FEPS-web

./: FEPS-SDD.md  FEPS-UserManual-Korean.html  FEPS-UserManual-Korean.md  FEPS-UserManual.html  FEPS-UserManual.md  README.md  help.html  index.html  nocache_server.py  test_hole.html  test_tqmesh.html
.claude/: launch.json  settings.local.json
FEPS-Csharp/: FEPS-Csharp.csproj  FepsDataDic.cs  FepsElements.cs  FepsElements_QuadTrig.cs  FepsEngine.cs  FepsGlobals.cs  FepsPostProcess.cs  FepsPreProcess.cs  FepsProgram.cs  FepsUtils.cs  Program.cs
FEPS-Csharp/Examples/: Seepage-examp-csharp.txt  Verif-temp.vfea  Verif.vfea
FEPS-Csharp/Examples/2D-portal-roof/: model-exact.out  model.inp
FEPS-Csharp/Examples/2dframe-test/: 2dframe-test.inp  2dframe-test.out  2dframe-test0.vtu  2dframe-test1.vtu
FEPS-Csharp/Examples/3beam-test/: 3dbeam-test.inp  3dbeam-test.out  3dbeam-test0.vtu  3dbeam-test1.vtu
FEPS-Csharp/Examples/3dgrid-test/: 3dgrid-test.inp  3dgrid-test.out  3dgrid-test0.vtu  3dgrid-test1.vtu
FEPS-Csharp/Examples/3dtruss-ex1/: 3dtruss-ex1.inp  3dtruss-ex1.out  3dtruss-ex10.vtu  3dtruss-ex11.vtu
FEPS-Csharp/Examples/3dtruss-hw/: 3dtruss-hw.inp  3dtruss-hw.out  3dtruss-hw.vtu  3dtruss-hw0.vtu  3dtruss-hw1.vtu
FEPS-Csharp/Examples/Final-prob1/: Final-prob1.inp  Final-prob1.out  Final-prob10.vtu  Final-prob11.vtu
FEPS-Csharp/Examples/Final-prob2/: Final-prob2.inp  Final-prob2.out  Final-prob20.vtu  (+1 more)
css/: style.css
examples/: README.md  ex01-truss-simple.inp  ex02-cantilever-beam.inp  ex03-portal-frame.inp  ex04-solid-plate-quad4.inp  ex05-solid-plate-trig3.inp  ex06-solid-plate-quad5.inp  ex07-solid-plate-quad9.inp
js/: element-core.js  element-debug-ui.js  element-debug.js  element-editor-ui.js  element-registry.js  help-ui.js  main.js  mesher.js  mesher2.js  parser.js  renderer.js  solver.js  tqmesh-wrapper.js  tqmesh.js
js/elements/: TimBeam2D_2N.js  TimBeam2D_3N.js  bar2_3N.js  quad5.js  quad8.js  quad9.js  trig6.js
wasm/: CMakeLists.txt  build.sh  tqmesh_bridge.cpp
(+35 files in other folders)
